[package]
name = "sld721"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.14"
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
ic-ledger-types = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
