[package]
name = "sld"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.18"
ic-certified-map = "0.3.1"
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.6"
ic-ledger-types = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9.8"
crc32fast = "1.3.0"
data-encoding = "2.3.2"
hex = "0.4.3"
serde_cbor = "0.11.2"
serde_json = "1.0.85"
serde_bytes = "0.11.7"
base64 = "0.13.0"
num-traits = "0.2.14"
