[package]
name = "nft721"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-kit = "0.4.2"
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde"] }
chrono = "0.4"
hex = "0.4.3"
sha2 = "0.8.0"
crc32fast = "1.3.1"
